# lynx

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: configuration.rs  main.rs
src/models/: link.rs  link_id.rs  mod.rs
src/routes/: index.rs  link.rs  mod.rs
