[package]
name = "lynx"
version = "0.1.0"
authors = ["Blooym"]
description = "Lightweight & declarative link shortner."
repository = "https://codeberg.org/Blooym/lynx"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["http2", "macros"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
toml = "0.9.5"
url = { version = "2.5.7", features = ["serde"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
notify = "8.2.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
