[package]
name = "lynx"
version = "0.1.0"
authors = ["Blooym"]
description = "Lightweight & declarative link shortner."
repository = "https://codeberg.org/Blooym/lynx"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = { version = "0.8.8", features = ["http2", "macros"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
tower-http = { version = "0.6.8", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
notify = "8.2.0"
